--- a/index.html
+++ b/index.html
@@ -370,9 +370,9 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
 
     <div class="contentBlock">
         <a name="student"></a>
-          <h2>Students</h2>
+          <h2>Team</h2>
           <div class="divider"></div>
-          <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Current Ph.D. Students</b></p> -->
+          <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ph.D. Students</b></p>
           <ul>
               <li><a href="https://entslscheia.github.io/">Yu Gu</a> (2020-)</li>
               <li><a href="https://vardaan123.github.io/">Vardaan Pahuja</a> (2020-)</li>
@@ -381,6 +381,16 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
               <li><a href="https://chanh.ee/">Chan Hee (Luke) Song</a> (2020-)</li>
               <li><a href="https://scholar.google.com/citations?user=KXSlX3sAAAAJ&hl=en">Shijie Chen</a> (2021-)</li>
               <li><a href="https://samuelstevens.me/">Sam Stevens</a> (2021-)</li>
+          </ul>
+          <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Undergraduate Students</b></p>
+          <ul>
+            <li><a href="#">Clay Washington</a> (2021-)</li>
+            <li><a href="#">Nikolas McNeal</a> (2021-)</li>
+            <li><a href="#">Sam Stevens</a> (2020-2021) &#x2192; Ph.D. at OSU</li>
+          </ul>
+          <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Interns/Visiting Scholars</b></p>
+          <ul>
+            <li><a href="https://esteng.github.io/">Elias Stengel-Eskin</a> (2021 summer intern at Microsoft)</li>
           </ul>
       </div>
 
