--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
             <ul>
                 <li>
                 <span class="paperTitle">An Investigation of Language Model Interpretability via Sentence Editing</span> <br />
-                <span class="paperAuthor">Samuel Stevens and Yu Su. To appear in the BlackboxNLP Workshop at EMNLP, 2021 (<b>BlackboxNLP'21</b>)</span>
+                <span class="paperAuthor">Samuel Stevens and Yu Su. In the Proc. of the BlackboxNLP Workshop at EMNLP, 2021 (<b>BlackboxNLP'21</b>)</span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2011.14039">paper</a>]  [<a href="https://github.com/samuelstevens/sentence-editing-interpretability">code and data</a>]</span>
                 </li>
                 <li>
                 <span class="paperTitle">ReasonBERT: Pre-trained to Reason with Distant Supervision</span> <br />
-                <span class="paperAuthor">Xiang Deng, Yu Su, Alyssa Lees, You Wu, Cong Yu and Huan Sun. To appear in the Conference on Empirical Methods in Natural Language Processing, 2021 (<b>EMNLP'21</b>)</span>
+                <span class="paperAuthor">Xiang Deng, Yu Su, Alyssa Lees, You Wu, Cong Yu and Huan Sun. In the Proc. of the Conference on Empirical Methods in Natural Language Processing, 2021 (<b>EMNLP'21</b>)</span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2109.04912">paper</a>] [<a href="https://github.com/sunlab-osu/ReasonBERT">code and pre-trained models</a>] </span>
                 </li>
                 <li>
@@ -182,7 +182,7 @@
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2005.00689">paper</a>] [<a href="https://github.com/sunlab-osu/MISP">code</a>]</span>
                 </li>
                 <li>
-                <span class="paperTitle">KGLM: Pretrained Knowledge-Grounded Language Model for Data-to-Text Generation</span> <br />
+                <span class="paperTitle">KGPT: Knowledge-Grounded Pre-Training for Data-to-Text Generation</span> <br />
                 <span class="paperAuthor">Wenhu Chen, Yu Su, Xifeng Yan, William Yang Wang. In Proc. of the Conference on Empirical Methods in Natural Language Processing, 2020 (<b>EMNLP’20</b>)</span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2010.02307">paper</a>] [<a href="https://github.com/wenhuchen/KGPT">code</a>]</span>
                 </li>
