--- a/index.html
+++ b/index.html
@@ -412,9 +412,10 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
         <h2>Service</h2>
         <div class="divider"></div>
         <ul>
-	    <li><b>Organizer/Co-chair</b>: <a href="https://2021.naacl.org/">NAACL'21</a> (Faculty Advisor to Student Research Workshop), <a href="https://nlp4prog.github.io/2021/">NLP4Prog'21</a>, <a href="https://nli-acl2020.github.io/">NLI'20</a> (co-located with ACL'20), NLPCC'20 Area Chair (Conversational Bot/QA Track), KBCOM'18 (co-located with WSDM'18)</li>
-	    <li><b>Program Committee Member</b>: AAAI'21, KDD'20 (session chair), ACL'20, EMNLP'20, AKBC'20, KDD'19 (session chair), NAACL'19, AAAI'19, AKBC'19, KDD'18, ACL'18, EMNLP'18, WWW'18, NLPCC'18, CoNLL'18, ACL'17, EMNLP'17, NLPCC'17, CIKM'17 (session chair)</li>
-            <li><b>Reviewer</b>: IEEE TNNLS, IEEE TKDE </li>
+	    <li><b>Organizer/Co-chair</b>: <a href="https://2021.naacl.org/">NAACL'21</a> (Faculty Advisor to Student Research Workshop), <a href="https://nlp4prog.github.io/2021/">NLP4Prog'21</a>, <a href="https://nli-acl2020.github.io/">NLI'20</a> (co-located with ACL'20), KBCOM'18 (co-located with WSDM'18)</li>
+	    <li><b>Area Chair</b>: ACL'22, NLPCC'20
+      <li><b>Program Committee Member</b>: ACL'22, ACL'21, EMNLP'21, NAACL'21, AKBC'21, KDD'21, AAAI'21, KDD'20 (session chair), ACL'20, EMNLP'20, AKBC'20, KDD'19 (session chair), NAACL'19, AAAI'19, AKBC'19, KDD'18, ACL'18, EMNLP'18, WWW'18, NLPCC'18, CoNLL'18, ACL'17, EMNLP'17, NLPCC'17, CIKM'17 (session chair)</li>
+      <li><b>Reviewer</b>: TACL, ACL Rolling Review, IEEE TNNLS, IEEE TKDE </li>
         </ul>
     </div>
 
@@ -442,7 +443,7 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
     -->
 
 
-    <div class="contentBlock">
+    <!-- <div class="contentBlock">
     	<a name="awards"></a>
         <h2>Awards</h2>
         <div class="divider"></div>
@@ -455,7 +456,7 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
             <li>Outstanding Graduate, Tsinghua University, 2012</li>
 	        <li>Merit-based Scholarships, Tsinghua University, 2008-2011</li>
         </ul>
-    </div>
+    </div> -->
     
 
 
