--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
         <a href="#teaching">Teaching</a>
         <a href="#publications">Publications</a>
         <a href="#experience">Experience</a>
+        <a href="#student">Students</a>
         <a href="#service">Service</a>
-	<a href="#contact">Contact</a>
+	      <a href="#contact">Contact</a>
         <!--<a href="#teaching">Teaching</a>
         <a href="#awards">Awards</a>-->
     </div>
