--- a/index.html
+++ b/index.html
@@ -390,10 +390,10 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
               <li><a href="https://entslscheia.github.io/">Yu Gu</a> (2020-)</li>
               <li><a href="https://vardaan123.github.io/">Vardaan Pahuja</a> (2020-)</li>
               <li><a href="https://dblp.org/pid/264/4620.html">Bernal Jiménez Gutiérrez</a> (2020-)</li>
-              <li><a href="https://pijusch.github.io/">Piyush Chawla</a> (2020-, Co-advised with Han-Wei Shen)</li>
+              <li><a href="https://pijusch.github.io/">Piyush Chawla</a> (2020-, co-advised with Han-Wei Shen)</li>
               <li><a href="https://chanh.ee/">Chan Hee (Luke) Song</a> (2020-)</li>
               <li><a href="https://scholar.google.com/citations?user=KXSlX3sAAAAJ&hl=en">Shijie Chen</a> (2021-)</li>
-              <li><a href="https://samuelstevens.me/">Sam Stevens</a> (2021-)</li>
+              <li><a href="https://samuelstevens.me/">Sam Stevens</a> (2021-, co-advised with Huan Sun)</li>
           </ul>
           <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Undergraduate Students</b></p>
           <ul>
