--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   	<div id="header">
     	<a href="#">Home</a>
         <a href="resources/CV_YuSu.pdf">CV</a>
+        <!-- <a href="#experience">Experience</a> -->
         <a href="#teaching">Teaching</a>
-        <a href="#publications">Publications</a>
-        <a href="#experience">Experience</a>
         <a href="#student">Students</a>
+        <a href="#publications">Publications</a>
         <a href="#service">Service</a>
 	      <a href="#contact">Contact</a>
         <!--<a href="#teaching">Teaching</a>
@@ -121,6 +121,21 @@
         </div>
     </div>
 
+    <!-- <div class="contentBlock">
+    	<a name="experience"></a>
+        <h2>Experience</h2>
+        <div class="divider"></div>
+        <ul>
+            <li>01/2020 - present: Assistant professor at <i>The Ohio State University</i></li>
+	    <li>10/2018 - present: Senior researcher at <i>Microsoft Semantic Machines</i></li>
+	    <li>08/2018 - 07/2019: Visiting assistant professor at <i>The Ohio State University</i></li>
+	    <li>06/2017 - 09/2017: Research intern at <i>Microsoft Research, Redmond</i></li>
+            <li>06/2016 - 09/2016: Research intern at <i>Microsoft Research, Redmond</i></li>
+            <li>05/2015 - 06/2015, 09/2015 - 11/2015, 05/2016 - 06/2016: Visiting researcher at <i>U.S. Army Research Laboratory</i></li>
+            <li>06/2015 - 09/2015: Research intern at <i>IBM T.J. Watson Research Center</i></li>
+        </ul>
+    </div> -->
+
     <div class="contentBlock">
         <a name="teaching"></a>
         <h2>Teaching</h2>
@@ -130,6 +145,32 @@
             <li>AU2021: CSE6521 - Introduction to Artificial Intelligence</a> (Graduate) </li>
             <li>AU2020: <a href="courses/au20/cse5539/">CSE5539 - Cutting-Edge Topics in Natural Language Processing</a> (Undergrad & Graduate)</li>
             <li>SP2020: <a href="courses/sp20/cse5243/">CSE5243 - Introduction to Data Mining</a> (Undergrad & Graduate)</li>
+        </ul>
+    </div>
+
+    <div class="contentBlock">
+      <a name="student"></a>
+        <h2>Students</h2>
+        <div class="divider"></div>
+        <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ph.D. Students</b></p>
+        <ul>
+            <li><a href="https://entslscheia.github.io/">Yu Gu</a> (2020-)</li>
+            <li><a href="https://vardaan123.github.io/">Vardaan Pahuja</a> (2020-)</li>
+            <li><a href="https://dblp.org/pid/264/4620.html">Bernal Jiménez Gutiérrez</a> (2020-)</li>
+            <li><a href="https://pijusch.github.io/">Piyush Chawla</a> (2020-, co-advised with Han-Wei Shen)</li>
+            <li><a href="https://chanh.ee/">Chan Hee (Luke) Song</a> (2020-)</li>
+            <li><a href="https://scholar.google.com/citations?user=KXSlX3sAAAAJ&hl=en">Shijie Chen</a> (2021-)</li>
+            <li><a href="https://samuelstevens.me/">Sam Stevens</a> (2021-, co-advised with Huan Sun)</li>
+        </ul>
+        <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Undergraduate Students</b></p>
+        <ul>
+          <li><a href="#">Clay Washington</a> (2021-)</li>
+          <li><a href="#">Nikolas McNeal</a> (2021-)</li>
+          <li><a href="#">Sam Stevens</a> (2020-2021) &#x2192; Ph.D. at OSU</li>
+        </ul>
+        <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Interns/Visiting Scholars</b></p>
+        <ul>
+          <li><a href="https://esteng.github.io/">Elias Stengel-Eskin</a> (2021 summer intern at Microsoft)</li>
         </ul>
     </div>
 
@@ -365,48 +406,6 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
 
         <!-- <h3 style="text-indent:20px">Under Review</h3> -->
     </div>
-
-    <div class="contentBlock">
-    	<a name="experience"></a>
-        <h2>Experience</h2>
-        <div class="divider"></div>
-        <ul>
-            <li>01/2020 - present: Assistant professor at <i>The Ohio State University</i></li>
-	    <li>10/2018 - present: Senior researcher at <i>Microsoft Semantic Machines</i></li>
-	    <li>08/2018 - 07/2019: Visiting assistant professor at <i>The Ohio State University</i></li>
-	    <li>06/2017 - 09/2017: Research intern at <i>Microsoft Research, Redmond</i></li>
-            <li>06/2016 - 09/2016: Research intern at <i>Microsoft Research, Redmond</i></li>
-            <li>05/2015 - 06/2015, 09/2015 - 11/2015, 05/2016 - 06/2016: Visiting researcher at <i>U.S. Army Research Laboratory</i></li>
-            <li>06/2015 - 09/2015: Research intern at <i>IBM T.J. Watson Research Center</i></li>
-            <!--<li>07/2011 - 09/2011: Undergraduate research assistant at <i>University of Notre Dame</i>, mentored by Prof. Xiaobo Sharon Hu </li>-->
-        </ul>
-    </div>
-
-    <div class="contentBlock">
-        <a name="student"></a>
-          <h2>Team</h2>
-          <div class="divider"></div>
-          <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ph.D. Students</b></p>
-          <ul>
-              <li><a href="https://entslscheia.github.io/">Yu Gu</a> (2020-)</li>
-              <li><a href="https://vardaan123.github.io/">Vardaan Pahuja</a> (2020-)</li>
-              <li><a href="https://dblp.org/pid/264/4620.html">Bernal Jiménez Gutiérrez</a> (2020-)</li>
-              <li><a href="https://pijusch.github.io/">Piyush Chawla</a> (2020-, co-advised with Han-Wei Shen)</li>
-              <li><a href="https://chanh.ee/">Chan Hee (Luke) Song</a> (2020-)</li>
-              <li><a href="https://scholar.google.com/citations?user=KXSlX3sAAAAJ&hl=en">Shijie Chen</a> (2021-)</li>
-              <li><a href="https://samuelstevens.me/">Sam Stevens</a> (2021-, co-advised with Huan Sun)</li>
-          </ul>
-          <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Undergraduate Students</b></p>
-          <ul>
-            <li><a href="#">Clay Washington</a> (2021-)</li>
-            <li><a href="#">Nikolas McNeal</a> (2021-)</li>
-            <li><a href="#">Sam Stevens</a> (2020-2021) &#x2192; Ph.D. at OSU</li>
-          </ul>
-          <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Interns/Visiting Scholars</b></p>
-          <ul>
-            <li><a href="https://esteng.github.io/">Elias Stengel-Eskin</a> (2021 summer intern at Microsoft)</li>
-          </ul>
-      </div>
 
 
     <div class="contentBlock">
