--- a/index.html
+++ b/index.html
@@ -385,21 +385,21 @@
 		</li>
             </ul>
 		
-	    <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Patents</b></p>
-            <ul>
-		<li>
-                <span class="paperTitle">Natural Language Interface to Web API (co-inventor)</span> <br />
-                <span class="paperAuthor">US Patent Granted 10496452B2</span><br />
-		<span class="paperAuthor">A framework for building natural language interface to web API via crowdsourcing with a hierarchical
+	    <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Patents</b></p>
+        <ul>
+		    <li>
+            <span class="paperTitle">Natural Language Interface to Web API (co-inventor)</span> <br />
+            <span class="paperAuthor">US Patent Granted 10496452B2</span><br />
+<span class="paperAuthor">A framework for building natural language interface to web API via crowdsourcing with a hierarchical
 probabilistic model and optimization algorithm for crowdsourcing.</span>
-                </li>
-                <li>
-                <span class="paperTitle">Natural Language to API Conversion (co-inventor)</span> <br />
-                <span class="paperAuthor">US Patent Pending 15/919,209</span><br />
-                <span class="paperAuthor">A framework for building interactive natural language interface to web APIs.</span>
-                </li>
-            </ul>
-        </div>
+            </li>
+            <li>
+            <span class="paperTitle">Natural Language to API Conversion (co-inventor)</span> <br />
+            <span class="paperAuthor">US Patent Pending 15/919,209</span><br />
+            <span class="paperAuthor">A framework for building interactive natural language interface to web APIs.</span>
+            </li>
+        </ul> -->
+      </div>
 	    
 	
 
