--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
         </p>
 	
 	<div>
-	<b>Thanks to generous support from NSF (<a href="https://icicle.osu.edu/">ICICLE Institute</a>, <a href="https://imageomics.osu.edu/">Imageomics Institute</a>, <a href="https://www.nsf.gov/news/special_reports/announcements/092221.jsp">Convergence Accelerator</a>), my group has multiple openings for students (PhD/Master/Undergraduate) and post-docs. Drop me an email with CV and transcripts if you are interested in natural language processing, machine learning, and data mining (unfortunately due to the high volumn I may not be able to reply to every email).</b>
+	<!-- <b>Thanks to generous support from NSF (<a href="https://icicle.osu.edu/">ICICLE Institute</a>, <a href="https://imageomics.osu.edu/">Imageomics Institute</a>, <a href="https://www.nsf.gov/news/special_reports/announcements/092221.jsp">Convergence Accelerator</a>), my group has multiple openings for students (PhD/Master/Undergraduate) and post-docs. Drop me an email with CV and transcripts if you are interested in natural language processing, machine learning, and data mining (unfortunately due to the high volumn I may not be able to reply to every email).</b> -->
+
+  <p>I'm always looking for highly motivated students. Drop me an email with CV and transcripts if you are interested in natural language processing, machine learning, or AI in general (unfortunately due to the high volumn I may not be able to reply to every email)</p>
+
+  <p><b>I'm hiring a postdoc (ML/CV/NLP background) with potential topics including multimodal foundation model pre-training, interpretability, and neuro-symbolic learning. Apply through <a href="https://tinyurl.com/463upmx2">job post</a> and send me an <a href="mailto: su.809@osu.edu">email</a> with CV!</b></p>
 	</div>
     </div>
 	    
