--- a/index.html
+++ b/index.html
@@ -195,6 +195,11 @@
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
                 <li>
+                <span class="paperTitle">One Step at a Time: Long-Horizon Vision-and-Language Navigation with Milestones</span> <br />
+                <span class="paperAuthor">Chan Hee Song, Jihyung Kil, Tai-Yu Pan, Brian M. Sadler, Wei-Lun Chao, Yu Su. arXiv preprint arXiv:2202.07028, 2022</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2202.07028">paper</a>]</span>
+                </li>
+                <li>
                 <span class="paperTitle">Random Control Selection for Conducting High-throughput Adverse Drug Events Screening Using Large-scale Longitudinal Health Data</span> <br />
                 <span class="paperAuthor">Chien-Wei Chiang, Penyue Zhang, Macarius Donneyong, You Chen, Yu Su, Lang Li. CPT: Pharmacometrics & Systems Pharmacology, 2021 (<b>PSP'21</b>)</span>
                 <span class="paperResource"> [<a href="https://pubmed.ncbi.nlm.nih.gov/34313404/">paper</a>]</span>
