--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 </li>
                 <li>
                 <span class="paperTitle">One Step at a Time: Long-Horizon Vision-and-Language Navigation with Milestones</span> <br />
-                <span class="paperAuthor">Chan Hee Song, Jihyung Kil, Tai-Yu Pan, Brian M. Sadler, Wei-Lun Chao, Yu Su. arXiv preprint arXiv:2202.07028, 2022</span>
+                <span class="paperAuthor">Chan Hee Song, Jihyung Kil, Tai-Yu Pan, Brian M. Sadler, Wei-Lun Chao, Yu Su. To apprear in the Conference on Computer Vision and Pattern Recognition, 2022 (<b>CVPR'22</b>)</span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2202.07028">paper</a>]</span>
                 </li>
                 <li>
