--- a/index.html
+++ b/index.html
@@ -196,10 +196,15 @@
 
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
+              <li>
+                <span class="paperTitle">Thinking about GPT-3 In-Context Learning for Biomedical IE? Think Again</span> <br />
+                <span class="paperAuthor">Bernal Jiménez Gutiérrez, Nikolas McNeal, Clay Washington, You Chen, Lang Li, Huan Sun, Yu Su. arXiv preprint arXiv:2203.08410, 2022</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/pdf/2203.08410.pdf">paper</a>]</span>
+                </li>
                 <li>
                 <span class="paperTitle">Bridging the Generalization Gap in Text-to-SQL Parsing with Schema Expansion</span> <br />
                 <span class="paperAuthor">Chen Zhao, Yu Su, Adam Pauls, Emmanouil Antonios Platanios. To apprear in the Annual Conference of the Association for Computational Linguistics, 2022 (<b>ACL'22</b>)</span>
-                <span class="paperResource"> [<a href="#">paper</a>]</span>
+                <span class="paperResource"> [<a href="#">paper</a>] (coming soon)</span>
                 </li>
                 <li>
                 <span class="paperTitle">One Step at a Time: Long-Horizon Vision-and-Language Navigation with Milestones</span> <br />
