--- a/index.html
+++ b/index.html
@@ -481,6 +481,19 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
     </div> -->
     
 
+    <div class="contentBlock">
+    	<a name="contact"></a>
+        <h2>Sponsers</h2>
+        <div class="divider"></div>
+        <ul>
+        	<li>We are grateful for NSF (awards 
+            <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2118240&HistoricalAwards=false">2118240</a>, 
+            <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2112606&HistoricalAwards=false">2112606</a>,
+            <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2137806&HistoricalAwards=false">2137806</a>),
+            Amazon, Walmart, Fujitsu, and OSU TDAI for supporting our research.
+          </li>
+        </ul>
+    </div>
 
     <div class="contentBlock">
     	<a name="contact"></a>
