--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 </li>
                 <li>
                 <span class="paperTitle">Random Control Selection for Conducting High-throughput Adverse Drug Events Screening Using Large-scale Longitudinal Health Data</span> <br />
-                <span class="paperAuthor">Chien-Wei Chiang, Penyue Zhang, Macarius Donneyong, You Chen, Yu Su, Lang Li. CPT: Pharmacometrics & Systems Pharmacology, 2021 (<b>PSP'21</b>)</span>
+                <span class="paperAuthor">Chien-Wei Chiang, Pengyue Zhang, Macarius Donneyong, You Chen, Yu Su, Lang Li. CPT: Pharmacometrics & Systems Pharmacology, 2021 (<b>PSP'21</b>)</span>
                 <span class="paperResource"> [<a href="https://pubmed.ncbi.nlm.nih.gov/34313404/">paper</a>]</span>
                 </li>
                 <li>
