--- a/index.html
+++ b/index.html
@@ -196,7 +196,12 @@
 
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
-              <li>
+                <li>
+                <span class="paperTitle">ArcaneQA: Dynamic Program Induction and Contextualized Encoding for Knowledge Base Question Answering</span> <br />
+                <span class="paperAuthor">Yu Gu and Yu Su. arXiv preprint arXiv:2204.08109, 2022</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/pdf/2204.08109.pdf">paper</a>]</span>
+                </li>
+                <li>
                 <span class="paperTitle">Thinking about GPT-3 In-Context Learning for Biomedical IE? Think Again</span> <br />
                 <span class="paperAuthor">Bernal Jiménez Gutiérrez, Nikolas McNeal, Clay Washington, You Chen, Lang Li, Huan Sun, Yu Su. arXiv preprint arXiv:2203.08410, 2022</span>
                 <span class="paperResource"> [<a href="https://arxiv.org/pdf/2203.08410.pdf">paper</a>]</span>
