--- a/index.html
+++ b/index.html
@@ -199,17 +199,17 @@
                 <li>
                 <span class="paperTitle">ArcaneQA: Dynamic Program Induction and Contextualized Encoding for Knowledge Base Question Answering</span> <br />
                 <span class="paperAuthor">Yu Gu and Yu Su. arXiv preprint arXiv:2204.08109, 2022</span>
-                <span class="paperResource"> [<a href="https://arxiv.org/pdf/2204.08109.pdf">paper</a>]</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2204.08109">paper</a>]</span>
                 </li>
                 <li>
                 <span class="paperTitle">Thinking about GPT-3 In-Context Learning for Biomedical IE? Think Again</span> <br />
                 <span class="paperAuthor">Bernal Jiménez Gutiérrez, Nikolas McNeal, Clay Washington, You Chen, Lang Li, Huan Sun, Yu Su. arXiv preprint arXiv:2203.08410, 2022</span>
-                <span class="paperResource"> [<a href="https://arxiv.org/pdf/2203.08410.pdf">paper</a>]</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2203.08410">paper</a>]</span>
                 </li>
                 <li>
                 <span class="paperTitle">Bridging the Generalization Gap in Text-to-SQL Parsing with Schema Expansion</span> <br />
                 <span class="paperAuthor">Chen Zhao, Yu Su, Adam Pauls, Emmanouil Antonios Platanios. To apprear in the Annual Conference of the Association for Computational Linguistics, 2022 (<b>ACL'22</b>)</span>
-                <span class="paperResource"> [<a href="#">paper</a>] (coming soon)</span>
+                <span class="paperResource"> [<a href="https://aclanthology.org/2022.acl-long.381/">paper</a>]</span>
                 </li>
                 <li>
                 <span class="paperTitle">One Step at a Time: Long-Horizon Vision-and-Language Navigation with Milestones</span> <br />
