--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>Check out <a href="https://twitter.com/osunlp/status/1477501035954454528?s=20">a summary of the major achievements</a> by the OSU NLP group in 2021!</b></li>
+            <li>05/2021: Thank you, Walmart and Cisco, for supporting our research!</li>
             <li>02/2021: Paper on long-horizon vison-and-language navigation accepted to CVPR 2022.</li>
             <li>02/2021: Paper on text-to-SQL generalization accepted to ACL 2022.</li>
             <li>11/2021: Our team is selected to participate in the <a href="https://developer.amazon.com/alexaprize/challenges/current-challenge/simbot">Alexa Prize SimBot challenge</a>!</li>
