--- a/index.html
+++ b/index.html
@@ -198,6 +198,11 @@
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
                 <li>
+                <span class="paperTitle">When More Data Hurts: A Troubling Quirk in Developing Broad-Coverage Natural Language Understanding Systems</span> <br />
+                <span class="paperAuthor">Elias Stengel-Eskin, Emmanouil Antonios Platanios, Adam Pauls, Sam Thomson, Hao Fang, Benjamin Van Durme, Jason Eisner, Yu Su. arXiv preprint arXiv:2205.12228, 2022</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2205.12228">paper</a>]</span>
+                </li>
+                <li>
                 <span class="paperTitle">ArcaneQA: Dynamic Program Induction and Contextualized Encoding for Knowledge Base Question Answering</span> <br />
                 <span class="paperAuthor">Yu Gu and Yu Su. arXiv preprint arXiv:2204.08109, 2022</span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2204.08109">paper</a>]</span>
