--- a/index.html
+++ b/index.html
@@ -215,13 +215,17 @@
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2203.08410">paper</a>]</span>
                 </li>
                 <li>
+                  <span class="paperTitle">Detecting Drug-Drug Interactions Between COVID-19 Therapies and Concomitant Medications Using the FDA Adverse Event Reporting System</span> <br />
+                  <span class="paperAuthor">Eugene Jeong, Scott D Nelson, Yu Su, Bradley Malin, Lang Li, You Chen. Frontiers in Pharmacology, 2022</span>
+                  <span class="paperResource"> [<a href="#">paper</a>]</span>
+                <li>
                 <span class="paperTitle">Bridging the Generalization Gap in Text-to-SQL Parsing with Schema Expansion</span> <br />
-                <span class="paperAuthor">Chen Zhao, Yu Su, Adam Pauls, Emmanouil Antonios Platanios. To apprear in the Annual Conference of the Association for Computational Linguistics, 2022 (<b>ACL'22</b>)</span>
+                <span class="paperAuthor">Chen Zhao, Yu Su, Adam Pauls, Emmanouil Antonios Platanios. In the Annual Conference of the Association for Computational Linguistics, 2022 (<b>ACL'22</b>)</span>
                 <span class="paperResource"> [<a href="https://aclanthology.org/2022.acl-long.381/">paper</a>]</span>
                 </li>
                 <li>
                 <span class="paperTitle">One Step at a Time: Long-Horizon Vision-and-Language Navigation with Milestones</span> <br />
-                <span class="paperAuthor">Chan Hee Song, Jihyung Kil, Tai-Yu Pan, Brian M. Sadler, Wei-Lun Chao, Yu Su. To apprear in the Conference on Computer Vision and Pattern Recognition, 2022 (<b>CVPR'22</b>)</span>
+                <span class="paperAuthor">Chan Hee Song, Jihyung Kil, Tai-Yu Pan, Brian M. Sadler, Wei-Lun Chao, Yu Su. In the Conference on Computer Vision and Pattern Recognition, 2022 (<b>CVPR'22</b>)</span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2202.07028">paper</a>]</span>
                 </li>
                 <li>
