--- a/index.html
+++ b/index.html
@@ -215,6 +215,11 @@
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2203.08410">paper</a>]</span>
                 </li>
                 <li>
+                  <span class="paperTitle">Bootstrapping a User-Centered Task-Oriented Dialogue System</span> <br />
+                  <span class="paperAuthor">Shijie Chen, Ziru Chen, Xiang Deng, Ashley Lewis, Lingbo Mo, Samuel Stevens, Zhen Wang, Xiang Yue, Tianshu Zhang, Yu Su, Huan Sun. Alexa Prize TaskBot Challenge Proceedings, 2022</span>
+                  <span class="paperResource"> [<a href="https://assets.amazon.science/9a/30/5e4931ec41d78abad730707ce95a/bootstrapping-a-user-centered-task-oriented-dialogue-system.pdf">paper</a>]</span>
+                  </li>
+                <li>
                   <span class="paperTitle">Detecting Drug-Drug Interactions Between COVID-19 Therapies and Concomitant Medications Using the FDA Adverse Event Reporting System</span> <br />
                   <span class="paperAuthor">Eugene Jeong, Scott D Nelson, Yu Su, Bradley Malin, Lang Li, You Chen. Frontiers in Pharmacology, 2022</span>
                   <span class="paperResource"> [<a href="#">paper</a>]</span>
