--- a/index.html
+++ b/index.html
@@ -173,14 +173,16 @@
         </ul>
         <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Undergraduate Students</b></p>
         <ul>
-          <li><a href="#">Clay Washington</a> (2021-)</li>
-          <li><a href="#">Nikolas McNeal</a> (2021-)</li>
+          <li>Alison Zhong (2022-)</li>
+          <li>Sparsh Kustagishettar (2022-)</li>
+          <li>Clay Washington (2021-)</li>
+          <li>Nikolas McNeal (2021-)</li>
           <li><a href="#">Sam Stevens</a> (2020-2021) &#x2192; Ph.D. at OSU</li>
         </ul>
-        <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Interns/Visiting Scholars</b></p>
+        <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Interns/Visiting Scholars</b></p>
         <ul>
           <li><a href="https://esteng.github.io/">Elias Stengel-Eskin</a> (2021 summer intern at Microsoft)</li>
-        </ul>
+        </ul> -->
     </div>
 
 
